[gd_scene load_steps=4 format=3 uid="uid://cqa48uwhlgwn"]

[ext_resource type="Theme" uid="uid://duoekascow5ke" path="res://Scenes/UI/ProjectTheme.tres" id="1_60vqp"]
[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="1_rm1u4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2lgj0"]
light_mode = 1

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rm1u4")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.3
offset_top = -12.0
offset_right = 21.3
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.258824, 0.290196, 1)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.384314, 0.501961, 0.537255, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 27.0
grow_horizontal = 2
theme_override_constants/separation = 115

[node name="LeftScore" type="Label" parent="HBoxContainer"]
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "0"

[node name="Label3" type="Label" parent="HBoxContainer"]
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "SCORE"

[node name="RightScore" type="Label" parent="HBoxContainer"]
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CenterContainer"]
z_index = 1
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "Start Game"

[node name="GameModeSelectors" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="ComButton" type="Button" parent="CenterContainer/GameModeSelectors"]
z_index = 1
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "VS Com"

[node name="PvPButton" type="Button" parent="CenterContainer/GameModeSelectors"]
z_index = 1
material = SubResource("CanvasItemMaterial_2lgj0")
layout_mode = 2
theme = ExtResource("1_60vqp")
text = "VS Player"

[connection signal="button_down" from="CenterContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="CenterContainer/GameModeSelectors/ComButton" to="." method="_on_com_button_button_down"]
[connection signal="button_down" from="CenterContainer/GameModeSelectors/PvPButton" to="." method="_on_pv_p_button_button_down"]
